--- a/service/pom.xml
+++ b/service/pom.xml
@@ -15,6 +15,7 @@
     <version>1.0.0</version>
     <modules>
         <module>service-hosp</module>
+        <module>service-cmn</module>
     </modules>
     <dependencies>
         <dependency>
