上传接口完成

--- a/service/service-hosp/pom.xml
+++ b/service/service-hosp/pom.xml
@@ -15,6 +15,13 @@
     <name>service-hosp</name>
     <description>service-hosp</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <finalName>service-hosp</finalName>
         <plugins>
