--- a/service/service-hosp/src/main/resources/application.properties
+++ b/service/service-hosp/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 #返回json的全局时间格式
-#spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-#spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 
 #配置mapper xml文件的路径
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
@@ -28,9 +28,9 @@ spring.datasource.password=root
 #spring.cloud.sentinel.transport.dashboard=http://127.0.0.1:8858
 
 #mongodb地址
-#spring.data.mongodb.host=192.168.44.163
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=yygh_hosp
+spring.data.mongodb.host=192.168.164.128
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=goyy_hosp
 
 #rabbitmq地址
 #spring.rabbitmq.host=127.0.0.1
