--- a/service/service-hosp/pom.xml
+++ b/service/service-hosp/pom.xml
@@ -20,6 +20,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.realgo.goyy.service.cmn.client</groupId>
+            <artifactId>service-cmn-client</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
