--- a/service/service-cmn/src/main/resources/application.properties
+++ b/service/service-cmn/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.redis.lettuce.pool.min-idle=0
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
 # nacos服务地址
-#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 #开启sentinel
 #feign.sentinel.enabled=true
